--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "cross-env": "^5.1.1",
@@ -19,9 +20,11 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
+    "chance": "^1.0.12",
     "eslint-config-google": "^0.9.1"
   }
 }
