--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www"
+    "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www",
+    "installDB": "node ./install_db.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
