--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "cluster": "node ./bin/cluster",
+    "start": "cross-env NODE_ENV=production node ./bin/www",
+    "cluster": "cross-env NODE_ENV=production node ./bin/cluster",
     "dev": "cross-env DEBUG=nodeapi:* nodemon ./bin/www",
     "installDB": "node ./install_db.js"
   },
