--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^5.1.1",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "eslint": "^4.13.1",
     "express": "~4.15.5",
     "express-validator": "^4.3.0",
@@ -27,6 +28,12 @@
   },
   "devDependencies": {
     "chance": "^1.0.12",
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
